# 6-dof-robotic-arm

./: README.md
owr_description/: CMakeLists.txt  package.xml
owr_description/meshes/collision/: BS_Link.STL  EW1_Link.STL  SE_Link.STL  W12_Link.STL  W23_Link.STL  W3Eff_Link.STL  base_link.STL
owr_description/meshes/factory_setup/: setup.STL  setup1.STL
owr_description/objects/: factory_setup_1.urdf  factory_setup_2.urdf  owr_base_table.urdf  table.urdf  table_1.urdf  table_2.urdf
owr_description/urdf/: common.gazebo.xacro  kinect_sensor.urdf.xacro  owr.gazebo.xacro  owr.transmission.xacro  owr.urdf.xacro  owr_robot.urdf.xacro
owr_description/urdf/gripper/: owr_robotiq_140.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro  robotiq_arg2f_transmission.xacro  robotiq_fts300.urdf.xacro
owr_gazebo/: CMakeLists.txt  package.xml
owr_gazebo/config/: controllers.yaml  gazebo_ros_control_params.yaml
owr_gazebo/launch/: owr_control.launch  owr_description.launch  owr_spawn.launch
owr_gazebo/models/kinect/: model.sdf
owr_gazebo/src/: move_to_joint_sim.cpp
owr_gazebo/urdf/: cracker.urdf
owr_gazebo/worlds/: 6d_pose_estimation.world  demo.world  factory.world  pick_place.world  setup_1.world
owr_gripper_ikfast_arm_manipulator_plugin/: CMakeLists.txt  README.md  owr_gripper_arm_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
owr_gripper_ikfast_arm_manipulator_plugin/src/: compute  ikfast61_arm_manipulator.cpp  ikfastdemo.cpp  owr_gripper_arm_manipulator_ikfast_moveit_plugin.cpp  owr_gripper_arm_manipulator_ikfast_solver.cpp
owr_manipulation/: CMakeLists.txt  package.xml
owr_manipulation/src/: ArmMotion.cpp  PickNPlace.cpp  PickNPlaceTest.cpp  planning_scene.cpp
owr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
owr_moveit_config/config/: camera_sensor.yaml  controllers.yaml  fake_controllers.yaml  gazebo_owr_gripper.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  owr_gripper.srdf  owr_jog.yaml  owr_real.srdf  owr_sim.srdf  ros_controllers.yaml  sensors_3d.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
owr_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  ik_plugin_test.launch  ik_plugins_test.launch  move_group.launch  moveit.rviz  moveit_.rviz  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  owr_moveit_controller_manager.launch.xml  owr_moveit_planning_execution.launch  owr_simulation_execution.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
owr_moveit_config/src/: ik_tests.cpp  setHomePose.cpp
owr_trajectory_controller/: CMakeLists.txt  package.xml
owr_trajectory_controller/src/: joint_trajectory_control.cpp
robot_vision/: CMakeLists.txt  package.xml
robot_vision/src/: downsampling.cpp  pointcloud_preprocessing.cpp
